🐛 Fix scroll issue on iOS

--- a/frontend/scss/components/organisms/preview-pane.scss
+++ b/frontend/scss/components/organisms/preview-pane.scss
@@ -34,6 +34,10 @@
   background: color('white');
   transform-origin: top;
 
+  iframe {
+    height: 100%;
+  }
+
   &-device {
     position: relative;
     display: flex;
